Revision history for File::DataClass

          - Simplified Build.PL. Updated test boilerplate
          - Uses DZ::P::AbstractFromPOD and LicenseFromModule
          - Dropped dependency on Class::Load

0.27.1    2013-11-22 09:40:23
          - Bumped Unexpected dependency to v0.15
          - ::IO::rel2abs stringifies the base arg
          - Updated git hooks

0.26.1    2013-09-26 17:02:33
          - Increased test coverage

0.25.1    2013-09-03 12:57:12
          - Bumped Unexpected version

0.24.3    2013-08-16 23:45:37
          - Updated toolchain
          - Converted to dist.ini. Dropped XML::DTD

0.23.2    2013-08-07 14:12:19
          - Reset min perl testing to original behaviour
          - POD updates

0.22.9    2013-08-02 20:04:28
          - Updated toolchain
          - Fixed no symlink support test skipping
          - New method for CPANTesting min Perl ver
          - Skip more tests on windows
          - Added fremen and frogman to tier gruber
          - Aborting Bingoes failed see df276fba-f57c-11e2-8c80-50d7c5c10595
            No choice but to send this smoker to sleep 10 while 1.
            Chris Williams, put my pause id in your stop list
          - Added missing dependency on MooX::ClassStash
          - Fixed unwanted Moose loading in ::Result
          - Depends on Moo version of CHI

0.21.29   2013-07-28 14:58:25
          - Fixed precedence bug in ::ResultSouce::has_column
          - ::IO parent takes an optional count
          - Lazy load CHI. Added reset to ::IO
          - Updated synopsis for ::IO
          - Removed ::Constraints
          - Switched to Exporter for speed
          - Refactored ::Types
          - Made ::IO::name lazy
          - Renamed ::Constraints to ::Types
          - Mooified the rest
          - Mooified ::IO

0.20.15   2013-06-25 15:36:17
          - Fixed defined/false bug in ::HashMerge
          - Delayed loading storage class for Any
          - Added File::Path as a prereq again