@@ -1,4 +1,4 @@
-; @(#)$Ident: dist.ini 2013-12-06 16:19 pjf ;
+; @(#)$Ident: dist.ini 2013-12-12 22:23 pjf ;
 
 name = File-DataClass
 
@@ -34,6 +34,8 @@ Module::Build     = 0.4004
 Test::Deep        = 0.108
 Test::Requires    = 0.06
 Text::Diff        = 1.37
+
+[Meta::Dynamic::Config]
 
 [MetaNoIndex]
 directory         = examples
